# python-analyser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  logs.dev.yaml  logs.prod.yaml  pyproject.toml  skaffold.yaml
.github/workflows/: actions.yaml
analyser/: __init__.py  __main__.py  api.py  logging.py  logging_.py  models.py
tests/: conftest.py  test_pip.py  test_poetry.py
tests/projects/simple_pip/: setup.py
